@@ -333,9 +333,6 @@ class DebBuildConfig(object):
   export_upstream_revision = _opt_property('export-upstream-revision',
                          "The revision of the upstream source to use.")
 
-  commit_message_from_changelog = _bool_property('commit-message-from-changelog',
-       "Whether the commit message should come from debian/changelog", default=False)
-
   quilt_smart_merge = _bool_property('quilt-smart-merge',
     "Automatically unapply quilt patches during merge", default=True)
 
